ALP: Latest code add ribbon details
